tests/neg/unroll-traitConstructor.check
-- [E207] Declaration Error: tests/neg/unroll-traitConstructor.scala:5:32 ----------------------------------------------
5 |trait Unroll(a: String, @unroll b: Boolean = true): // error
  |                                ^
  |                                implementation restriction: Cannot unroll parameters of a trait constructor
